// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
<div>
  <ul
    className="css-17h7x4w e1lp2x6z0"
  >
    <li>
      <a
        className="e1lp2x6z1 css-xlqnnq"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
<div>
  <ul
    className="css-17h7x4w e1lp2x6z0"
  >
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-xlqnnq"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
<div>
  <ul
    className="css-17h7x4w e1lp2x6z0"
  >
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/1"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          1
        </span>
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-oz1auh"
        href="/articles/page/2"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          2
        </span>
      </a>
    </li>
    <li>
      <a
        className="e1lp2x6z1 css-xlqnnq"
        href="/articles/page/3"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <span>
          3
        </span>
      </a>
    </li>
  </ul>
</div>
`;
